2008-10-02  Brett Wilson  <brettw@chromium.org>

        Reviewed by Sam Weinig

        https://bugs.webkit.org/show_bug.cgi?id=21292

        Revert the changes to enclosingIntRect made in r12530 since the new code
        doesn't round correctly.

        * ChangeLog:
        * platform/graphics/FloatRect.cpp:
        (WebCore::enclosingIntRect):

2008-10-02  Dan Bernstein  <mitz@apple.com>

        Reviewed by Anders Carlsson and Eric Seidel.

        - fix HTMLCanvaseElement leak from -webkit-canvas() values

        Changed the m_element member of CSSCanvasValue from a RefPtr to a plain
        pointer, as the document owns the canvas elements. Added code to release
        those elements in Document::removedLastRef() because they reference
        the document.

        * css/CSSCanvasValue.cpp:
        (WebCore::CSSCanvasValue::element):
        * css/CSSCanvasValue.h:
        (WebCore::CSSCanvasValue::CSSCanvasValue):
        * dom/Document.cpp:
        (WebCore::Document::removedLastRef):

2008-10-02  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Maciej Stachowiak.

        Build fix for platforms that don't implement WTF::ThreadSpecific.

        * bindings/js/JSDOMBinding.cpp: (WebCore::wrapperSet):
        Guard ThreadSpecific use with #if ENABLE(WORKERS). No platform defines this yet, but this
        code is only needed for JS bindings in worker threads.

2008-10-01  David Hyatt  <hyatt@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=21298
        
        Make updateScrollbars cross-platform.  For now a stubbed out scrollContents function is invoked to do the scrolling of the backing store.  Next patch
        will make that cross-platform.  
        
        The ScrollView now implements ScrollbarClient, which means that there was a clash of windowClipRect methods from the
        multiple inheritance.  For now I solved this by adding a Scrollbar* to the ScrollbarClient version of the method, but longer term